# api

./: .flake8  .gitignore  README.md  main,.py  pyproject.toml
.github/workflows/: deploy.yml
api/: __env.py  env  env.dev  main.py  product_api.py  pyproject.toml  requirements.txt  tmp.py  tmp_copy.py
api/.deta/: prog_info  state
